--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,5 +1,5 @@
-displayName=Example
-author=Nobody
-description=An example greeter plugin
-tags=
-plugins=com.example.ExamplePlugin
+displayName= Nature Runecraft Utilities
+author=Alex M
+description=Swaps Diary Cape left click option to teleport to Jarr at the nature altar.
+tags= runecraft, rc, swap, nature, altar, diary, runecrafting, menu, entry, menu entry swapper
+plugins=com.NatureRCUtil.NatureRCUtilPlugin
