--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,5 +1,5 @@
-displayName= Nature Runecraft Utilities
-author=Alex M
-description=Swaps Diary Cape left click option to teleport to Jarr at the nature altar.
-tags= runecraft, rc, swap, nature, altar, diary, runecrafting, menu, entry, menu entry swapper
-plugins=com.NatureRCUtil.NatureRCUtilPlugin
+displayName= Blood Runecraft Utilities
+author=jimbob
+description=Swaps Construction Cape left click option to wear at the blood altar.
+tags= runecraft, rc, swap, blood, altar, diary, runecrafting, menu, entry, menu entry swapper
+plugins=com.BloodRCUtil.BloodRCUtilPlugin
